--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.9.0",
         "@fortawesome/vue-fontawesome": "^0.1.6",
         "apexcharts": "^3.8.1",
+        "bootstrap-datepicker": "^1.9.0",
         "vue-apexcharts": "^1.4.0"
     }
 }
